# trust-graph

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.sh  example_secret_key.ed25519  rust-toolchain.toml
.circleci/: config.yml
.github/release-please/: config.json  manifest.json
.github/workflows/: release.yml  run-tests.yml  rust_ci.yml  tests.yml
admin/: README.md  index.ts  package-lock.json  package.json
admin/aqua/: export.aqua
aqua/: CHANGELOG.md  export.aqua  labelling.aqua  misc.aqua  package-lock.json  package.json  trust-graph-api.aqua  trust-graph.aqua
builtin-package/: blueprint.json  on_start.air  on_start.json  package.sh  sqlite3_config.json  trust-graph_config.json
distro/: CHANGELOG.md  Cargo.toml  Config.toml  init_certs.json
distro/src/: lib.rs
example/: README.md  index.ts  package-lock.json  package.json
example/aqua/: computation.aqua  export.aqua
identity/: Cargo.toml
identity/src/: ed25519.rs  error.rs  key_pair.rs  keypair.rs  lib.rs  public_key.rs  rsa.rs  secp256k1.rs  secret_key.rs  signature.rs
js/: .gitignore  package-lock.json  package.json
js/src/: index.ts  misc.ts  trust.ts  trust_graph.ts
js/src/__test__/: client.spec.ts
keypair/: CHANGELOG.md  Cargo.toml  rust-toolchain.toml
keypair/src/: ed25519.rs  error.rs  key_pair.rs  lib.rs  public_key.rs  rsa.rs  secp256k1.rs  signature.rs
local-network/: builtins_secret_key.ed25519  docker-compose.yml
service/: .repl_history  CHANGELOG.md  Cargo.toml  Config.toml  build.rs  build.sh  run-repl.sh  rust-toolchain.toml  trust-graph.aqua
service/artifacts/: trust-graph.wasm
service/src/: dto.rs  error.rs  main.rs  misc.rs  results.rs  service_api.rs  service_impl.rs  storage_impl.rs  tests.rs
src/: certificate.rs  certificate_serde.rs  key_pair.rs  lib.rs  public_key_hashable.rs  revoke.rs  trust.rs  trust_graph.rs  trust_graph_storage.rs  trust_node.rs  trust_relation.rs
trust-graph/: CHANGELOG.md  Cargo.toml
trust-graph/src/: certificate.rs  chain.rs  public_key_hashable.rs  trust_graph.rs
trust-graph/src/misc/: mod.rs
wasm/: Cargo.toml  run-repl.sh
wasm/src/: dto.rs  main.rs  results.rs  service_api.rs  service_impl.rs  storage_impl.rs
