[package]
name = "trust-graph"
version = "0.3.0"
authors = ["Fluence Labs"]
edition = "2021"
description = "trust graph"
license = "Apache-2.0"
repository = "https://github.com/fluencelabs/trust-graph"

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }

fluence-keypair = { path = "./keypair", version = "0.9.0" }
serde_json = "1.0.58"
bs58 = "0.3.1"
failure = "0.1.6"
log = "0.4.11"
ref-cast = "1.0.2"
derivative = "2.1.1"
signature = "1.3.0"
serde_with = "1.6.0"
thiserror = "1.0.23"
sha2 = "0.9.5"
rand = "0.7.0"
nonempty = "0.7.0"

[workspace]
members = [
    "keypair",
    "service"
]

[workspace.dependencies]
libp2p-core = { version = "0.39.1", default-features = false, features = [ "secp256k1", "rsa" ] }
