[workspace]
members = [
    "trust-graph",
    "keypair",
    "service",
    "distro"
]

[workspace.dependencies]
libp2p-identity = { version = "0.2.1", default-features = false }

[patch.crates-io]
libp2p-identity = { git = "https://github.com/fluencelabs/rust-libp2p.git", branch = "rand-feature" }
