[package]
name = "fluence-identity"
version = "0.2.3"
authors = ["Fluence Labs"]
edition = "2018"
description = "identity"
license = "Apache-2.0"
repository = "https://github.com/fluencelabs/trust-graph"

[dependencies]
libp2p-core = { package = "fluence-fork-libp2p-core", version = "0.27.1" }
serde = { version = "=1.0.118", features = ["derive"] }
serde_json = "1.0.58"
bs58 = "0.3.1"
ed25519-dalek = { version = "1.0.1", features = ["serde"] }
rand = "0.7.0"
signature = "1.3.0"
ed25519 = "1.0.3"
serde_with = "1.6.0"
thiserror = "1.0.23"
