[package]
name = "fluence-keypair"
version = "0.9.0"
authors = ["Fluence Labs"]
edition = "2021"
description = "identity"
license = "Apache-2.0"
repository = "https://github.com/fluencelabs/trust-graph"

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
bs58 = "0.4.0"
ed25519-dalek = { version = "1.0.1", features = ["serde", "std"] }
rand = "0.7.0"
thiserror = "1.0.23"
lazy_static = "1.2"
libsecp256k1 = "0.7.1"
asn1_der = "0.6.1"
sha2 = "0.10.6"
zeroize = "1"
serde_bytes = "0.11"
eyre = "0.6.5"
libp2p-identity = { workspace = true }
multihash = { version = "0.18.0", features = ["identity"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ring = { version = "0.16.9", features = ["alloc", "std"], default-features = false }

[dev-dependencies]
quickcheck = "0.9.0"
