[package]
name = "fluence-keypair"
version = "0.10.3"
authors = ["Fluence Labs"]
edition = "2021"
description = "unified keypair API based on libp2p-identity"
license = "Apache-2.0"
repository = "https://github.com/fluencelabs/trust-graph"

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
bs58 = "0.5.0"
ed25519-dalek = { version = "2.0.0", features = ["serde", "std"] }
thiserror = "1.0.23"
lazy_static = "1.4"
sha2 = "0.10.6"
zeroize = "1"
serde_bytes = "0.11"
eyre = "0.6.5"
libp2p-identity = { workspace = true, default-features = false, features = ["peerid", "ed25519"] }
multihash = { version = "0.18.0", features = ["identity"] }
# rand fails to compile for restricted environments like NEAR contracts
rand = { version = "0.8.5", optional = true }

[features]
default = ["rand"]
rand = ["dep:rand", "ed25519-dalek/rand_core", "libp2p-identity/rand"]

[dev-dependencies]
quickcheck = "1.0.3"
