[package]
name = "trust-graph-wasm"
version = "0.3.1"
authors = ["Fluence Labs"]
edition = "2018"
description = "trust graph wasm"
license = "Apache-2.0"

[[bin]]
name = "trust-graph"
path = "src/main.rs"

[dependencies]
trust-graph = { version = "0.3.0", path = "../." }
fluence-keypair = { version = "0.6.0", path = "../keypair" }
marine-rs-sdk = { version = "0.6.14", features = ["logger"] }
marine-sqlite-connector = "0.5.2"

libp2p-core = { version = "0.31", default-features = false, features = [ "secp256k1" ] }

log = "0.4.8"
anyhow = "1.0.31"
boolinator = "2.4.0"
once_cell = "1.4.1"
parking_lot = "0.11.1"
serde_json = "1.0"
bs58 = "0.3.1"
rmp-serde = "0.15.0"
bincode = "1.3.1"
serde_bencode = "^0.2.3"
thiserror = "1.0.23"

[dev-dependencies]
marine-rs-sdk-test = "0.4.0"
rusqlite = "0.26.1"

[build-dependencies]
marine-rs-sdk-test = "0.4.0"
