[package]
name = "trust-graph-wasm"
version = "0.4.0"
authors = ["Fluence Labs"]
edition = "2021"
description = "trust graph wasm"
license = "Apache-2.0"
publish = false

[[bin]]
name = "trust-graph"
path = "src/main.rs"

[dependencies]
trust-graph = { version = "0.4.0", path = "../trust-graph" }
fluence-keypair = { version = "0.10.0", path = "../keypair" }
marine-rs-sdk = { version = "0.7.1", features = ["logger"] }
marine-sqlite-connector = "0.8.0"

libp2p-identity = { workspace = true }

log = "0.4.8"
anyhow = "1.0.31"
once_cell = "1.4.1"
serde_json = "1.0"
bs58 = "0.4.0"
rmp-serde = "1.1.1"
bincode = "1.3.1"
thiserror = "1.0.23"

[dev-dependencies]
marine-rs-sdk-test = "0.8.1"
rusqlite = "0.28.0"

[build-dependencies]
marine-rs-sdk-test = "0.8.1"
