[package]
name = "trust-graph"
version = "0.4.11"
authors = ["Fluence Labs"]
edition = "2021"
description = "trust graph"
license = "Apache-2.0"
repository = "https://github.com/fluencelabs/trust-graph"

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }

fluence-keypair = { path = "../keypair", version = "0.10.4" }
bs58 = "0.4.0"
failure = "0.1.8"
log = "0.4.11"
ref-cast = "1.0.2"
derivative = "2.2.0"
thiserror = "1.0.23"
sha2 = "0.10.6"
nonempty = "0.8.1"
rand = "0.8.5"
